Ajout de fake SMTP

--- a/src/main/java/SpringBatchParLaPratique/formations-batch-master/ReadMe
+++ b/src/main/java/SpringBatchParLaPratique/formations-batch-master/ReadMe
@@ -3,3 +3,22 @@ https://github.com/zaroumia/formations-batch
 
 le cours udemy est le suivant :
 https://www.udemy.com/course/spring-batch-par-la-pratique/learn/lecture/16708258#overview
+
+bdd root/root
+
+Your account number is: 488620
+
+Your new database is now ready to use.
+
+To connect to your database use these details
+
+Server: sql7.freemysqlhosting.net
+Name: sql7391231
+Username: sql7391231
+Password: 2HYKtAWeTb
+Port number: 3306
+
+=======================
+aller dans fakeSMTP
+cd C:\FORMATION\ExerciceJavaScript\ExcerciceJavaScript\src\main\java\SpringBatchParLaPratique\formations-batch-master\FakeSMTP\FakeSMTP-master
+executer la commade maven
